--- a/Blazor-Dashboard/Shared/NavMenuZ.razor
+++ b/Blazor-Dashboard/Shared/NavMenuZ.razor
@@ -12,13 +12,13 @@
     </div>
     <div class="collapse">
         <ul class="nav flex-column">
-            <li class="nav-item-side px-3">
+            <li class="nav-item px-3">
                 <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
                     <span class="oi oi-home" aria-hidden="true"></span> Home
                 </NavLink>
             </li>
 
-            <li class="nav-item-side px-3">
+            <li class="nav-item px-3">
                 <NavLink class="nav-link" href="counter">
                     <span class="oi oi-plus" aria-hidden="true"></span> Counter
                 </NavLink>
