--- a/Blazor-Dashboard/wwwroot/css/sitez.css
+++ b/Blazor-Dashboard/wwwroot/css/sitez.css
@@ -3,60 +3,29 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+/*commented
+a, .btn-link {
+    color: #0366d6;
+}
 
+.btn-primary {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
+*/
 app {
     position: relative;
     display: flex;
     flex-direction: column;
-
 }
 
 .top-row {
     height: 3.5rem;
-
+/*  commented
+    display: flex;
+    align-items: center;*/
 }
-/*
-.top-row-blank {
-    height: 3.5rem;
-
-}
-*/
-.top-rowx {
-    height: 3.5rem;
-}
-
-.top-rowx {
-    background-color: #F8F9FB;
-    border-bottom: 1px solid #d6d5d5;
-    z-index: 2;
-    display: block;
-    position: sticky;
-    top: 0;
-}
-
-    .top-rowx .navbar {
-        height: 3.5rem;
-        border-bottom: 1px solid #d6d5d5;
-    }
-
-        .top-rowx .navbar .navbar-collapse .navbar-nav .action {
-            vertical-align: middle;
-        }
-
-        .top-rowx .navbar .navbar-collapse .navbar-nav .nav-item .bell {
-            vertical-align: middle;
-            margin-top: 8px
-        }
-
-        .top-rowx .navbar .navbar-nav .nav-item .flag {
-            vertical-align: middle;
-            margin-top: 2px
-        }
-
-        .top-rowx .navbar .navbar-nav .nav-item .user {
-            vertical-align: middle
-        }
-
 /*
 display and hide use for displaying and hiding action/user bar
 */
@@ -67,42 +36,17 @@ display and hide use for displaying and hiding action/user bar
 .hide-user-bar{
     display: none;
 }
-/*
-.top-rowx-blank {
-    background-color: #F8F9FB;
-    border-bottom: 1px solid #d6d5d5;
-    z-index: 2;
-    display: none;
-    position: sticky;
-    top: 0;
-}
-
-    .top-rowx-blank .navbar {
-        height: 3.5rem;
-        border-bottom: 1px solid #d6d5d5;
-    }
-
-        .top-rowx-blank .navbar .navbar-collapse .navbar-nav .nav-item .bell {
-            vertical-align: middle;
-            margin-top: 8px
-        }
-
-        .top-rowx-blank .navbar .navbar-nav .nav-item .flag {
-            vertical-align: middle;
-            margin-top: 2px
-        }
-
-        .top-rowx-blank .navbar .navbar-nav .nav-item .user {
-            vertical-align: middle
-        }
-*/
-
 
 .main {
     flex: 1;
 }
 
     .main .top-row {
+        /*modified
+        background-color: #f7f7f7;
+        border-bottom: 1px solid #d6d5d5;
+        justify-content: flex-end;
+        */
         background-color: #F8F9FB;
         border-bottom: 1px solid #d6d5d5;        
         z-index: 199;      
@@ -110,6 +54,19 @@ display and hide use for displaying and hiding action/user bar
         position:sticky;
         top:0;
     }
+        /*commented
+        .main .top-row > a, .main .top-row .btn-link {
+            white-space: nowrap;
+            margin-left: 1.5rem;
+        }
+
+        .main .top-row a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        */
+
+        /*Personalize*/
         .main .top-row .navbar {
             height: 3.5rem;
             border-bottom: 1px solid #d6d5d5;
@@ -131,39 +88,6 @@ display and hide use for displaying and hiding action/user bar
             .main .top-row .navbar .navbar-nav .nav-item .user {
                 vertical-align: middle
             }
-/*
-    .main .top-row-blank .navbar .navbar-collapse .navbar-nav .action {
-        vertical-align: middle;
-    }
-
-    .main .top-row-blank {
-        background-color: #F8F9FB;
-        border-bottom: 1px solid #d6d5d5;
-        z-index: 199;
-        display: none;
-        position: sticky;
-        top: 0;
-    }
-
-        .main .top-row-blank .navbar {
-            height: 3.5rem;
-            border-bottom: 1px solid #d6d5d5;
-        }
-
-            .main .top-row-blank .navbar .navbar-collapse .navbar-nav .nav-item .bell {
-                vertical-align: middle;
-                margin-top: 8px
-            }
-
-            .main .top-row-blank .navbar .navbar-nav .nav-item .flag {
-                vertical-align: middle;
-                margin-top: 2px
-            }
-
-            .main .top-row-blank .navbar .navbar-nav .nav-item .user {
-                vertical-align: middle
-            }
-*/
 
 .sidebar {
     position: sticky;
@@ -188,40 +112,72 @@ display and hide use for displaying and hiding action/user bar
         top: -2px;
     }
 
+    .sidebar .nav-item {
+        font-size: 0.9rem;
+        padding-bottom: 0.5rem;
+    }
+    
+        .sidebar .nav-item:first-of-type {
+            padding-top: 1rem;
+        }
+    
+        .sidebar .nav-item:last-of-type {
+            padding-bottom: 1rem;
+        }
+    
+        .sidebar .nav-item a {
+            color: #d7d7d7;
+            border-radius: 4px;
+            height: 3rem;
+            display: flex;
+            align-items: center;
+            line-height: 3rem;
+        }
+    
+            .sidebar .nav-item a.active {
+                background-color: rgba(255,255,255,0.25);
+                color: white;
+            }
+    
+            .sidebar .nav-item a:hover {
+                background-color: rgba(255,255,255,0.1);
+                color: white;
+            }
+    
 /*4/2/2020
 below required to style the slidebar the same way as the sidebars
+shift to sidebarz?
 */
 
-.slidebar-container .top-row {
+.slidebar .top-row {
     background-color: rgb(40, 41, 59);
 }
 
-.slidebar-container .navbar-brand {
+.slidebar .navbar-brand {
     font-size: 1.1rem;
 }
 
-.slidebar-container .oi {
+.slidebar .oi {
     width: 2rem;
     font-size: 1.1rem;
     vertical-align: text-top;
     top: -2px;
 }
 
-/*consider optimizing as the following use by sidebar and slidebar*/
-.nav-item-side {
+.slidebar .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
-
-    .nav-item-side:first-of-type {
+        
+    .slidebar .nav-item:first-of-type {
         padding-top: 1rem;
     }
 
-    .nav-item-side:last-of-type {
+    .slidebar .nav-item:last-of-type {
         padding-bottom: 1rem;
     }
 
-    .nav-item-side a {
+    .slidebar .nav-item a {
         color: #d7d7d7;
         border-radius: 4px;
         height: 3rem;
@@ -230,22 +186,34 @@ below required to style the slidebar the same way as the sidebars
         line-height: 3rem;
     }
 
-        .nav-item-side a.active {
+        .slidebar .nav-item a.active {
             background-color: rgba(255,255,255,0.25);
             color: white;
         }
 
-        .nav-item-side a:hover {
+        .slidebar .nav-item a:hover {
             background-color: rgba(255,255,255,0.1);
             color: white;
         }
-
+        
 .content {
     padding-top: 1.1rem;
 }
 
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.valid.modified:not([type=checkbox]) {
+    outline: 1px solid #26b050;
+}
+
+.invalid {
+    outline: 1px solid red;
+}
+
+.validation-message {
+    color: red;
 }
 
 #blazor-error-ui {
@@ -269,20 +237,22 @@ below required to style the slidebar the same way as the sidebars
 
 
 @media (max-width: 767.98px) {
-    /*
-    .main .top-row-blank {
+    /*commented
+    .main .top-row:not(.auth) {
         display: none;
+    }
+
+    .main .top-row.auth {
+        justify-content: space-between;
+    }
+
+    .main .top-row a, .main .top-row .btn-link {
+        margin-left: 0;
     }
     */
     .main .top-row {
         top: 0px;
     }
-
-    /*
-    .top-rowx-blank {
-        display: none;
-    }
-    */
 
     .top-rowx {
         top: 50px;
@@ -301,54 +271,26 @@ below required to style the slidebar the same way as the sidebars
         flex-direction: row;
     }
 
+    /*added*/
     .hide-user-bar{
         display: block;
     }
     
-    /*always display whether the top bar hidden or not when large window*/
-    /*
-    .main .top-row-blank {
-        display: block; 
-    }
-    */
-    /*always display whether the top bar hidden or not when large window*/
-    /*
-    .top-rowx-blank {
-        display: block; 
-    }
-    */
-    /*
-
-    .main .top-row-blank {
-        position: sticky;
-        top: 0;
-        display: block;
- 
-    }
-    .main .top-row {
-        top: 0px;
-        position: sticky;
-        z-index: 199;
-    }
-    */
 
     .sidebar {
-        /*
-        background: black;
-        */
         width: 250px;
         height: 100vh;
         position: sticky;
         top: 0;
     }
-/*
-    .slidebar {
-        width: 250px;
-        height: 100vh;
+
+    /*commented    
+    .main .top-row {
         position: sticky;
         top: 0;
     }
-*/
+    */
+
     .main > div {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
@@ -362,11 +304,6 @@ below required to style the slidebar the same way as the sidebars
     .sidebar .collapse {
         display: block;
     }
-/*
-    .slidebar .collapse {
-        display: block;
-    }
-*/
 
 
 }
