--- a/Blazor-Dashboard/Pages/FetchData.razor
+++ b/Blazor-Dashboard/Pages/FetchData.razor
@@ -39,9 +39,9 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
     }
-
+ 
     public class WeatherForecast
     {
         public DateTime Date { get; set; }
